changings- added new project

--- a/GroupTeaDetails.html
+++ b/GroupTeaDetails.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -55,7 +57,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
+              <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -113,18 +116,23 @@
               <ul>
                 <li><strong>Category</strong>: Flutter App</li>
                 <li><strong>Client</strong>: Personal Project</li>
-                <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
-                <!-- <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li> -->
+                <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Community Chat App</h2>
               <p>
-                Group Tea is a cross-platform community chatting app developed using Flutter. It enables users to chat in groups and exchange messages, images and videos with each other. Firebase Authentication was used for user registration and Firebase Firestore was utilized as the backend database to store user and group details. The app is designed with an intuitive user interface and supports real-time messaging. Group Tea is a personal project that was completed in August 2022, showcasing the developer's proficiency in Flutter and mobile app development.          </div>
+                Group Tea is a cross-platform community chatting app developed using Flutter. It enables users to chat
+                in groups and exchange messages, images and videos with each other. Firebase Authentication was used for
+                user registration and Firebase Firestore was utilized as the backend database to store user and group
+                details. The app is designed with an intuitive user interface and supports real-time messaging. Group
+                Tea is a personal project that was completed in August 2022, showcasing the developer's proficiency in
+                Flutter and mobile app development.
+            </div>
+
+          </div>
 
         </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
@@ -145,7 +153,8 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
