--- a/PPocket.html
+++ b/PPocket.html
@@ -41,14 +41,14 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Muhammad Ahmad Mahmood</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/ahmaddioxide/" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+          <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -94,12 +94,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/GroupTea2.png" alt="">
+                  <img src="assets/img/portfolio/PPocket.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/GroupTea.png" alt="">
+                  <img src="assets/img/portfolio/PPocket-Logo.png" alt="">
                 </div>
+
+                <!-- <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                </div> -->
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -109,25 +114,26 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>:Flutter App</li>
-                <li><strong>Client</strong>: Personal Project</li>
+                <li><strong>Category</strong>: Flutter App & Desktop Application (integration)</li>
+                <li><strong>Client</strong>: FYP & Google solutions challenge</li>
+                <!-- <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Community Chat App</h2>
+              <h2>EcoReceipts: Your Sustainable Receipt and Budget Manager</h2>
               <p>
-                Group Tea is a cross-platform community chatting app developed using Flutter. It enables users to chat
-                in groups and exchange messages, images and videos with each other. Firebase Authentication was used for
-                user registration and Firebase Firestore was utilized as the backend database to store user and group
-                details. The app is designed with an intuitive user interface and supports real-time messaging. Group
-                Tea is a personal project that was completed in August 2022, showcasing the developer's proficiency in
-                Flutter and mobile app development. </p>
+                <br>This project is about creating a sustainable solution that eliminates the need for paper receipts by generating Quick Response (QR) codes for invoices/receipts, which users can scan using a mobile app. The app also offers budget management features that allow users to track their expenses and spending habits.
+
+<br><br>With this system, users can scan the QR code and store the bill's details in the app, allowing them to view their receipts later without worrying about losing them. Shopkeepers will also have access to a dashboard where they can keep track of receipts.
+
+<br><br>The budget management feature helps users track their expenses and control their spending habits. The app provides real-time feedback on spending habits and offers suggestions for cost-saving measures. Additionally, the app uses data science to automatically deduct expenses from the user's budget, allowing them to keep track of their expenses in real time.
+
+<br><br>This system offers a sustainable solution to eliminate paper receipts and provides an efficient way to manage expenses and budget, making it an eco-friendly and practical choice for users.
             </div>
+
           </div>
 
         </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
@@ -139,6 +145,10 @@
         &copy; Copyright <strong><span>ahmaddioxide</span></strong>
       </div>
       <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         Designed by <a href="https://bootstrapmade.com/">ahmaddioxide</a>
       </div>
     </div>
