--- a/SaveBilbyDetails.html
+++ b/SaveBilbyDetails.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -45,7 +47,6 @@
           <a href="https://twitter.com/ahmaddioxide/" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -55,7 +56,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
+              <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -93,15 +95,6 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/SaveBilby.png" alt="">
                 </div>
-
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio/GroupTea.png" alt="">
-                </div> -->
-
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div> -->
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -120,7 +113,14 @@
             <div class="portfolio-description">
               <h2>Field Camera Images Categorization App</h2>
               <p>
-                Save the Bilby is a mobile application developed using Flutter that helps categorize field camera images for a conservation organization. The app utilizes Firebase Realtime Database and Firebase Authentication as backend services to store data and authenticate users. Images are stored in Firebase Firestore, and the EmailJS API is used to send notification emails to users. Additionally, push notifications are implemented through Firebase Cloud Messaging, and state management is handled using the getX package. The project also includes an admin page that allows for easy image management, uploading, and user email exports for newsletters.            </div>
+                Save the Bilby is a mobile application developed using Flutter that helps categorize field camera images
+                for a conservation organization. The app utilizes Firebase Realtime Database and Firebase Authentication
+                as backend services to store data and authenticate users. Images are stored in Firebase Firestore, and
+                the EmailJS API is used to send notification emails to users. Additionally, push notifications are
+                implemented through Firebase Cloud Messaging, and state management is handled using the getX package.
+                The project also includes an admin page that allows for easy image management, uploading, and user email
+                exports for newsletters.
+            </div>
           </div>
 
         </div>
@@ -137,16 +137,13 @@
         &copy; Copyright <strong><span>ahmaddioxide</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         Designed by <a href="https://bootstrapmade.com/">ahmaddioxide</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
