changings- added new education

--- a/PPocket.html
+++ b/PPocket.html
@@ -122,13 +122,21 @@
             <div class="portfolio-description">
               <h2>EcoReceipts: Your Sustainable Receipt and Budget Manager</h2>
               <p>
-                <br>This project is about creating a sustainable solution that eliminates the need for paper receipts by generating Quick Response (QR) codes for invoices/receipts, which users can scan using a mobile app. The app also offers budget management features that allow users to track their expenses and spending habits.
+                <br>This project is about creating a sustainable solution that eliminates the need for paper receipts by
+                generating Quick Response (QR) codes for invoices/receipts, which users can scan using a mobile app. The
+                app also offers budget management features that allow users to track their expenses and spending habits.
 
-<br><br>With this system, users can scan the QR code and store the bill's details in the app, allowing them to view their receipts later without worrying about losing them. Shopkeepers will also have access to a dashboard where they can keep track of receipts.
+                <br><br>With this system, users can scan the QR code and store the bill's details in the app, allowing
+                them to view their receipts later without worrying about losing them. Shopkeepers will also have access
+                to a dashboard where they can keep track of receipts.
 
-<br><br>The budget management feature helps users track their expenses and control their spending habits. The app provides real-time feedback on spending habits and offers suggestions for cost-saving measures. Additionally, the app uses data science to automatically deduct expenses from the user's budget, allowing them to keep track of their expenses in real time.
+                <br><br>The budget management feature helps users track their expenses and control their spending
+                habits. The app provides real-time feedback on spending habits and offers suggestions for cost-saving
+                measures. Additionally, the app uses data science to automatically deduct expenses from the user's
+                budget, allowing them to keep track of their expenses in real time.
 
-<br><br>This system offers a sustainable solution to eliminate paper receipts and provides an efficient way to manage expenses and budget, making it an eco-friendly and practical choice for users.
+                <br><br>This system offers a sustainable solution to eliminate paper receipts and provides an efficient
+                way to manage expenses and budget, making it an eco-friendly and practical choice for users.
             </div>
 
           </div>
