--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
               <h4>Bachelor of Computer Science</h4>
               <h5>2020 - 2024</h5>
               <p><em>Air University, Islamabad</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Courses: PF, OOP, OS, DLD, Database, Data Structures, Design of Algorithms, App Development
+                <br>CGPA: 3.25</p>
             </div>
 
           </div>
