--- a/index.html
+++ b/index.html
@@ -269,69 +269,60 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
+   <!-- ======= Portfolio Section ======= -->
+<section id="portfolio" class="portfolio section-bg">
+  <div class="container">
 
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Check out my app showcase to see some of my recent projects! From creating a cross-platform community
-            chatting app to developing an app that provides weather updates using OpenWeather API, I have experience in
-            hybrid and native app development. One of my most exciting projects involved working as a freelance
-            developer for Save The Bilby Fund, where I developed an app from scratch using Flutter, Firebase, and GetX.
-            I enjoy taking on new challenges and am always eager to create innovative solutions using the latest
-            technologies.</p>
-        </div>
+    <div class="section-title">
+      <h2>Portfolio</h2>
+      <p>Check out my app showcase to see some of my recent projects! From creating a cross-platform community chatting app to developing an app that provides weather updates using OpenWeather API, I have experience in hybrid and native app development. One of my most exciting projects involved working as a freelance developer for Save The Bilby Fund, where I developed an app from scratch using Flutter, Firebase, and GetX. I enjoy taking on new challenges and am always eager to create innovative solutions using the latest technologies.</p>
+    </div>
 
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter=".filter-app">Projects</li>
-
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/PPocket.png" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="assets/img/portfolio/PPocket.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                title="PPocket"><i class="bx bx-plus"></i></a>
-              <a href="PPocket.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="assets/img/portfolio/SaveBilby.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                title="Save Bilby"><i class="bx bx-plus"></i></a>
-              <a href="SaveBilbyDetails.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/GroupTea.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/GroupTea.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Group Tea"><i class="bx bx-plus"></i></a>
-                <a href="GroupTeaDetails.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-
-
-
-        </div>
-
+    <div class="row" data-aos="fade-up">
+      <div class="col-lg-12 d-flex justify-content-center">
+        <ul id="portfolio-flters">
+          <li data-filter=".filter-app">Projects</li>
+        </ul>
       </div>
-    </section><!-- End Portfolio Section -->
+    </div>
+
+    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/PPocket.png" class="img-fluid" alt="">
+          <div class="portfolio-links">
+            <a href="assets/img/portfolio/PPocket.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="PPocket"><i class="bx bx-plus"></i></a>
+            <a href="PPocket.html" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid" alt="">
+          <div class="portfolio-links">
+            <a href="assets/img/portfolio/SaveBilby.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Save Bilby"><i class="bx bx-plus"></i></a>
+            <a href="SaveBilbyDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/GroupTea.png" class="img-fluid" alt="">
+          <div class="portfolio-links">
+            <a href="assets/img/portfolio/GroupTea.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Group Tea"><i class="bx bx-plus"></i></a>
+            <a href="GroupTeaDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End Portfolio Section -->
+
 
 
 
