--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+   <!-- ======= Hero Section ======= -->
+   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Muhammad Ahmad Mahmood</h1>
-      <p>I'm <span class="typed" data-typed-items="Computer Scientist, App Developer, Flutter Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -82,9 +83,29 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a forward-thinking, adaptable computer science student, and
-            App Developer with good technical skills. Passionate about App development,
-            backend, and blockchain computing. Adept at motivating others and self.</p>
+          <p> Welcome to my professional corner of the internet! I am Muhammad Ahmad Mahmood, a final year computer
+            science student with a flair for all things Flutter development.
+
+            <br><br> As a self-proclaimed tech wizard, I possess a solid foundation in technical skills including OOP,
+            DSA, Quantum Computing, and Database management. But don't worry, I won't bore you with all the tech
+            jargon!
+
+            <br><br> I am also a highly motivated and adaptable team player, with intelligence and logical thinking
+            skills that will blow your mind! And if that's not enough to impress you, I am also a master of
+            communication and presentation skills - I can make even the most complex ideas sound simple and
+            interesting.
+
+            <br><br>When I am not busy developing amazing apps, you can find me building communities as a Beta
+            Microsoft Learn Student Ambassador. As a die-hard believer in the power of collaboration, I love sharing
+            my knowledge and skills with others.
+
+            <br><br>And let's not forget about the importance of staying up-to-date with industry standards! I am
+            always on top of the latest trends and developments in the tech world, so you can be sure that my skills
+            are always current.
+            <br><br>
+            I am a well-rounded individual with a unique blend of technical and interpersonal skills. So, if you're
+            looking for someone who is as funny as they are professional, as skilled as they are adaptable, and as
+            passionate as they are intelligent, then look no further! Thanks for stopping by!
         </div>
 
         <div class="row">
@@ -94,25 +115,10 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Hybrid App Developer &amp; Computer Scientist.</h3>
             <p class="fst-italic">
-              Welcome to my professional corner of the internet! I am Muhammad Ahmad Mahmood, a final year computer
-              science student with a flair for all things Flutter development.
-
-              <br><br> As a self-proclaimed tech wizard, I possess a solid foundation in technical skills including OOP,
-              DSA, Quantum Computing, and Database management. But don't worry, I won't bore you with all the tech
-              jargon!
-
-              <br><br> I am also a highly motivated and adaptable team player, with intelligence and logical thinking
-              skills that will blow your mind! And if that's not enough to impress you, I am also a master of
-              communication and presentation skills - I can make even the most complex ideas sound simple and
-              interesting.
-
-              <br><br>When I am not busy developing amazing apps, you can find me building communities as a Beta
-              Microsoft Learn Student Ambassador. As a die-hard believer in the power of collaboration, I love sharing
-              my knowledge and skills with others.
-
-              <br><br>And let's not forget about the importance of staying up-to-date with industry standards! I am
-              always on top of the latest trends and developments in the tech world, so you can be sure that my skills
-              are always current.
+              I'm a computer science student and app developer with a passion for pushing the limits of what technology
+              can do.
+              I'm always on the lookout for exciting new projects to tackle, whether it's developing cutting-edge
+              blockchain applications or building streamlined backend systems.
 
             </p>
             <div class="row">
@@ -133,9 +139,7 @@
               </div>
             </div>
             <p>
-              I am a well-rounded individual with a unique blend of technical and interpersonal skills. So, if you're
-              looking for someone who is as funny as they are professional, as skilled as they are adaptable, and as
-              passionate as they are intelligent, then look no further! Thanks for stopping by!
+
             </p>
           </div>
         </div>
@@ -150,9 +154,16 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>My programming skills include Dart, Java, C++, JavaScript, HTML, CSS, and Python, while my technical
+          <ul>
+            <li><i class="bi bi-chevron-right"></i> <strong>Languages:</strong> <span>Dart, Java, C++, JavaScript, HTML,
+                CSS, Python, C.</span></li>
+            <li><i class="bi bi-chevron-right"></i> <strong>technologies:</strong> <span>Flutter, Native Android, React,
+                GetX, Firebase, XML, Android Studio, Azure, Linux, MVC, Git/GitHub, JIRA, REST APIs, Postman, Cloud
+                Messaging, AI/ML, IoT.</span></li>
+          </ul>
+          <!-- <p>My programming skills include Dart, Java, C++, JavaScript, HTML, CSS, and Python, while my technical
             expertise encompasses Flutter, Native Android, GetX, Firebase, XML, Android Studio, Azure, Linux, and many
-            more. I'm also familiar with MVC, Git/GitHub, JIRA, REST APIs, Postman, Cloud Messaging, AI/ML, and IoT.</p>
+            more. I'm also familiar with MVC, Git/GitHub, JIRA, REST APIs, Postman, Cloud Messaging, AI/ML, and IoT.</p> -->
         </div>
 
         <div class="row skills-content">
@@ -160,20 +171,14 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Flutter & Dart <i class="val">80%</i></span>
+              <span class="skill">Flutter & Dart <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Native Android <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
+         
 
             <div class="progress">
               <span class="skill">JavaScript <i class="val">75%</i></span>
@@ -182,11 +187,6 @@
                 </div>
               </div>
             </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
             <div class="progress">
               <span class="skill">C++ <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
@@ -196,12 +196,41 @@
             </div>
 
             <div class="progress">
+              <span class="skill">Python<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="progress">
+              <span class="skill">Native Android <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
               <span class="skill">Firebase <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">HTML/CSS <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
 
 
 
@@ -244,7 +273,8 @@
               <h5>2020 - 2024</h5>
               <p><em>Air University, Islamabad</em></p>
               <p>Courses: PF, OOP, OS, DLD, Database, Data Structures, Design of Algorithms, App Development
-                <br>CGPA: 3.25</p>
+                <br>CGPA: 3.25
+              </p>
             </div>
 
           </div>
@@ -269,59 +299,67 @@
       </div>
     </section><!-- End Resume Section -->
 
-   <!-- ======= Portfolio Section ======= -->
-<section id="portfolio" class="portfolio section-bg">
-  <div class="container">
+    <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio section-bg">
+      <div class="container">
 
-    <div class="section-title">
-      <h2>Portfolio</h2>
-      <p>Check out my app showcase to see some of my recent projects! From creating a cross-platform community chatting app to developing an app that provides weather updates using OpenWeather API, I have experience in hybrid and native app development. One of my most exciting projects involved working as a freelance developer for Save The Bilby Fund, where I developed an app from scratch using Flutter, Firebase, and GetX. I enjoy taking on new challenges and am always eager to create innovative solutions using the latest technologies.</p>
-    </div>
+        <div class="section-title">
+          <h2>Portfolio</h2>
+          <p>Check out my app showcase to see some of my recent projects! From creating a cross-platform community
+            chatting app to developing an app that provides weather updates using OpenWeather API, I have experience in
+            hybrid and native app development. One of my most exciting projects involved working as a freelance
+            developer for Save The Bilby Fund, where I developed an app from scratch using Flutter, Firebase, and GetX.
+            I enjoy taking on new challenges and am always eager to create innovative solutions using the latest
+            technologies.</p>
+        </div>
 
-    <div class="row" data-aos="fade-up">
-      <div class="col-lg-12 d-flex justify-content-center">
-        <ul id="portfolio-flters">
-          <li data-filter=".filter-app">Projects</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/PPocket.png" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/PPocket.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="PPocket"><i class="bx bx-plus"></i></a>
-            <a href="PPocket.html" title="More Details"><i class="bx bx-link"></i></a>
+        <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter=".filter-app">Projects</li>
+            </ul>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/SaveBilby.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Save Bilby"><i class="bx bx-plus"></i></a>
-            <a href="SaveBilbyDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/PPocket.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/PPocket.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="PPocket"><i class="bx bx-plus"></i></a>
+                <a href="PPocket.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <div class="portfolio-wrap">
-          <img src="assets/img/portfolio/GroupTea.png" class="img-fluid" alt="">
-          <div class="portfolio-links">
-            <a href="assets/img/portfolio/GroupTea.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Group Tea"><i class="bx bx-plus"></i></a>
-            <a href="GroupTeaDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/SaveBilby.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Save Bilby"><i class="bx bx-plus"></i></a>
+                <a href="SaveBilbyDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/GroupTea.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/GroupTea.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Group Tea"><i class="bx bx-plus"></i></a>
+                <a href="GroupTeaDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
         </div>
+
       </div>
-
-    </div>
-
-  </div>
-</section><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section -->
 
 
 
@@ -409,4 +447,4 @@
 
 </body>
 
-</html>
+</html> 
