--- a/GroupTeaDetails.html
+++ b/GroupTeaDetails.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -116,7 +116,7 @@
               <ul>
                 <li><strong>Category</strong>: Flutter App</li>
                 <li><strong>Client</strong>: Personal Project</li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li>
+                <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/GroupTea</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
