--- a/PPocket.html
+++ b/PPocket.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -115,7 +115,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Flutter App & Desktop Application (integration)</li>
-                <li><strong>Client</strong>: FYP & Google solutions challenge</li>
+                <li><strong>Client</strong>: FYP & Google Solutions Challenge</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li> -->
               </ul>
             </div>
