--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Muhammad Ahmad Mahmood</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Hybrid Apps Developer, Computer Scientist, Flutter Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
