Resume Summary Added

--- a/index.html
+++ b/index.html
@@ -255,11 +255,10 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Muhammad Ahmad Mahmood</h4>
-              <p><em>Muhammad Ahmad Mahmood is a highly motivated computer science student with strong technical skills
-                  in Flutter and native Android app development. He has over one year of experience in hybrid and native
-                  app development. Ahmad is a logical thinker, good team worker, and has excellent presentation and
-                  communication skills. He has completed certifications in JavaScript, Version Control, Front-End
-                  Development, AI, Azure Fundamentals, AI for IT and Non-IT Professionals, and NDG Linux.</em></p>
+              <p><em>I am Muhammad Ahmad Mahmood, a passionate computer science student with expertise in Flutter and native Android app development. 
+                With over a year of experience in hybrid and native app development, 
+                I am a logical thinker and a team player with excellent communication and presentation skills. 
+                I am committed to continuous learning and have completed several certifications, including JavaScript, Version Control, Front-End Development, AI, Azure Fundamentals, AI for IT and Non-IT Professionals, and NDG Linux.</em></p>
               <ul>
                 <li>E11, Islamabad, Pakistan</li>
                 <li>+92 332 5106960</li>
