--- a/index.html
+++ b/index.html
@@ -275,6 +275,18 @@
                 <br>CGPA: 3.25
               </p>
             </div>
+            <div class="resume-item">
+              <h4>F.Sc Pre-Engineering </h4>
+              <h5>2018 - 2020</h5>
+              <p><em>Aspire Group of Colleges</em></p>
+              <p>Secured: 86%</p>
+            </div>
+            <div class="resume-item">
+              <h4>Matricualtion (Science)</h4>
+              <h5>2016 - 2018</h5>
+              <p><em>Iqra International Institute</em></p>
+              <p>Secured: 91%</p>
+            </div>
 
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
