--- a/SaveBilbyDetails.html
+++ b/SaveBilbyDetails.html
@@ -47,10 +47,10 @@
           <a href="https://twitter.com/ahmaddioxide/" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://github.com/ahmaddioxide" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
-
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
