--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://twitter.com/ahmaddioxide/" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+          <a href="https://github.com/ahmaddioxide" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -271,7 +271,7 @@
               <h4>Bachelor of Computer Science</h4>
               <h5>2020 - 2024</h5>
               <p><em>Air University, Islamabad</em></p>
-              <p>Courses: PF, OOP, OS, DLD, Database, Data Structures, Design of Algorithms, App Development
+              <p>Courses: PF, OOP, OS, DLD,Assembly Language, Database, Data Structures, Design of Algorithms, Computer Networks, App Development, AI, ML, and many more.
                 <br>CGPA: 3.25
               </p>
             </div>
@@ -303,7 +303,26 @@
                 <li>Desingned admin page for images management , upload , and users emails export for newsletters</li>
               </ul>
             </div>
-
+            <h3 class="resume-title">Volunteer Experience</h3>
+            <div>
+             
+            </div>
+            <div class="resume-item">
+              <h4>Beta-Microsoft Learn Student Ambassador</h4>
+              <h5>2022 - Current</h5> <button type="button" class="btn btn-outline-dark"  onclick="window.open('https://studentambassadors.microsoft.com/en-US/studentambassadors/profile/666e2504-08be-4684-834e-20eb7a90890d','_blank')">
+                View Profile
+              </button>
+              <p><em>Microsoft Learn</em></p>
+              <ul>
+                <li>Served as Operations Lead at What’s Teching 3 days technical event.</li>
+                <li>Acted as think tank team lead to host Air University’s biggest coding competition.</li>
+                <li>Enhanced your proficiency in Microsoft technologies by completing learning paths on the Microsoft Learn platform.</li>
+                <li>Developed leadership, communication, and project management skills while serving as Operations Lead and think tank team lead in organizing technical events.</li>
+                <li>Learned website design and development using HTML, CSS, and Bootstrap, and gained experience in website hosting using Azure Cloud.</li>
+                <li>Improved my ability to teach and share knowledge with peers by hosting learning-based workshops using Microsoft technologies.</li>
+                
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -417,7 +436,10 @@
 
           </div>
 
-
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <!-- <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="ahmaddioxide" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://pk.linkedin.com/in/ahmaddioxide?trk=profile-badge">Muhammad Ahmad Mahmood</a></div> -->
+              <!-- <iframe src="https://www..com/" height="500" width="500" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>               -->
+          </div>
 
         </div>
 
@@ -452,8 +474,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
+  <!-- <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script> -->
   <script src="assets/js/main.js"></script>
 
 </body>
