--- a/PPocket.html
+++ b/PPocket.html
@@ -47,7 +47,7 @@
           <a href="https://twitter.com/ahmaddioxide/" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+          <a href="https://github.com/ahmaddioxide" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
