--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -41,14 +41,14 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Muhammad Ahmad Mahmood</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/ahmaddioxide/" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://github.com/ahmaddioxide" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
