New Links Added. Maps Editted

--- a/index.html
+++ b/index.html
@@ -428,17 +428,25 @@
                 <p>+92 332 5106960</p>
               </div>
               <br><br>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13277.767084989759!2d72.96826058284778!3d33.697515941260974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfbdc4664299b5%3A0xf6d98da3a5f71ac!2sE-11%2C%20Islamabad%2C%20Islamabad%20Capital%20Territory%2C%20Pakistan!5e0!3m2!1sen!2s!4v1678548491926!5m2!1sen!2s"
-                width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <div class="social-links mt-3 text-center  ">
+                <a href="https://twitter.com/ahmaddioxide/" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://github.com/ahmaddioxide" class="github"><i class="bx bxl-github"></i></a>
+                <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
+             
             </div>
 
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <!-- <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="ahmaddioxide" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://pk.linkedin.com/in/ahmaddioxide?trk=profile-badge">Muhammad Ahmad Mahmood</a></div> -->
-              <!-- <iframe src="https://www..com/" height="500" width="500" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>               -->
+            <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13277.767084989759!2d72.96826058284778!3d33.697515941260974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfbdc4664299b5%3A0xf6d98da3a5f71ac!2sE-11%2C%20Islamabad%2C%20Islamabad%20Capital%20Territory%2C%20Pakistan!5e0!3m2!1sen!2s!4v1678548491926!5m2!1sen!2s"
+            width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!-- <iframe src="https://linktr.ee/ahmaddioxide" height="500" width="500" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>               -->
           </div>
 
         </div>
