Porfolio Images Issues resolved

--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
                 GetX, Firebase, XML, Android Studio, Azure, Linux, MVC, Git/GitHub, JIRA, REST APIs, Postman, Cloud
                 Messaging, AI/ML, IoT.</span></li>
           </ul>
-          <!-- <p>My programming skills include Dart, Java, C++, JavaScript, HTML, CSS, and Python, while my technical
-            expertise encompasses Flutter, Native Android, GetX, Firebase, XML, Android Studio, Azure, Linux, and many
-            more. I'm also familiar with MVC, Git/GitHub, JIRA, REST APIs, Postman, Cloud Messaging, AI/ML, and IoT.</p> -->
+      
         </div>
 
         <div class="row skills-content">
@@ -247,7 +245,6 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -355,7 +352,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PPocket.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/PPocket.png" class="img-fluid portfolio-image" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/PPocket.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="PPocket"><i class="bx bx-plus"></i></a>
@@ -366,7 +363,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid  portfolio-image" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/SaveBilby.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Save Bilby"><i class="bx bx-plus"></i></a>
@@ -377,7 +374,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/GroupTea.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/GroupTea.png" class="img-fluid portfolio-image" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/GroupTea.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Group Tea"><i class="bx bx-plus"></i></a>
