Images Sizes Decreased

--- a/GroupTeaDetails.html
+++ b/GroupTeaDetails.html
@@ -94,11 +94,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/GroupTea.png" alt="">
+                  <img src="assets/img/portfolio/GroupTea.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/GroupTea2.png" alt="">
+                  <img src="assets/img/portfolio/GroupTea2.jpg" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
