--- a/PPocket.html
+++ b/PPocket.html
@@ -94,11 +94,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/PPocket.png" alt="">
+                  <img src="assets/img/portfolio/PPocket.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/PPocket-Logo.png" alt="">
+                  <img src="assets/img/portfolio/PPocket-Logo.jpg" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
