--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PPocket.png" class="img-fluid portfolio-image" alt="">
+              <img src="assets/img/portfolio/PPocket.jpg" class="img-fluid portfolio-image" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/PPocket.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                <a href="assets/img/portfolio/PPocket.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="PPocket"><i class="bx bx-plus"></i></a>
                 <a href="PPocket.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -363,9 +363,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid  portfolio-image" alt="">
+              <img src="assets/img/portfolio/SaveBilby.jpg" class="img-fluid  portfolio-image" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/SaveBilby.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                <a href="assets/img/portfolio/SaveBilby.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Save Bilby"><i class="bx bx-plus"></i></a>
                 <a href="SaveBilbyDetails.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -374,9 +374,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/GroupTea.png" class="img-fluid portfolio-image" alt="">
+              <img src="assets/img/portfolio/GroupTea.jpg" class="img-fluid portfolio-image" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/GroupTea.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                <a href="assets/img/portfolio/GroupTea.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Group Tea"><i class="bx bx-plus"></i></a>
                 <a href="GroupTeaDetails.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
