--- a/SaveBilbyDetails.html
+++ b/SaveBilbyDetails.html
@@ -93,7 +93,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/SaveBilby.png" alt="">
+                  <img src="assets/img/portfolio/SaveBilby.jpg" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
