--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <p> Welcome to my professional corner of the internet! I am Muhammad Ahmad Mahmood, a final year computer
             science student with a flair for all things Flutter development.
 
-            <br><br> As a self-proclaimed tech wizard, I possess a solid foundation in technical skills including OOP,
+            <br>As a self-proclaimed tech wizard, I possess a solid foundation in technical skills including OOP,
             DSA, Quantum Computing, and Database management. But don't worry, I won't bore you with all the tech
             jargon!
 
@@ -97,7 +97,7 @@
             Microsoft Learn Student Ambassador. As a die-hard believer in the power of collaboration, I love sharing
             my knowledge and skills with others.
 
-            <br><br>And let's not forget about the importance of staying up-to-date with industry standards! I am
+            <br>And let's not forget about the importance of staying up-to-date with industry standards! I am
             always on top of the latest trends and developments in the tech world, so you can be sure that my skills
             are always current.
             <br><br>
