--- a/SaveBilbyDetails.html
+++ b/SaveBilbyDetails.html
@@ -137,7 +137,7 @@
         &copy; Copyright <strong><span>ahmaddioxide</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">ahmaddioxide</a>
+        Designed by <a href="https://github.com/ahmaddioxide/">ahmaddioxide</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
