--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -139,7 +139,7 @@
         &copy; Copyright <strong><span>ahmaddioxide</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">ahmaddioxide</a>
+        Designed by <a href="https://github.com/ahmaddioxide/">ahmaddioxide</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
